[package]
name = "peanosynth"
version = "0.1.0"
authors = ["Alex Feinberg <alex@strlen.net>"]
edition = "2018"

[lib]
name = "peanosynth"
path = "src/lib.rs"

[[bin]]
name = "peanosynth"
path = "src/main.rs"

[dependencies]
anyhow = "*"
cpal = "0.12"
dasp = { version = "0.11", features = ["all"] }
find_folder = "0.3"
hound = "3"
egui = "*"
eframe = "*"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.8.4"

